--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <li class="talk-meta">
                     <div class="start_at"><span>Fri Oct 14 12:20:00 2011 (20min.)</span></div>
                     <div class="title">
-                        <div> Something about Smart Phone (TBD) (Something about Smart Phone (TBD))</div>
+                        <div> SmartPhone development guide with Node/CoffeeScript and HTML5 technologies, for Perl programmers</div>
                         <div>Naoya Ito (naoya)</div>
                     </div>
 
@@ -225,7 +225,7 @@
                     </div>
                 </li>
                 <li class="talk-summary" style="display:none;">
-                    <div class="summary">TBD</div>
+                    <div class="summary">Node/Coffee や HTML5 関連あるいは PhoneGap や Titanium Mobile などの JavaScript middleware を使ってのスマートフォン開発の手法を Perl での開発と比較しつつ、解説します。</div>
                 </li>
             </ul>
         </div>
@@ -252,7 +252,7 @@
                 <li class="talk-meta">
                     <div class="start_at"><span>Fri Oct 14 12:20:00 2011 (20min.)</span></div>
                     <div class="title">
-                        <div> TBD</div>
+                        <div> A Language for getting the job done</div>
                         <div>Dan Kogai (dankogai)</div>
                     </div>
 
@@ -261,7 +261,7 @@
                     </div>
                 </li>
                 <li class="talk-summary" style="display:none;">
-                    <div class="summary">Something totally new coming from Dan Kogai...</div>
+                    <div class="summary">&quot;Perl is a language for getting the job done&quot;. This definition has not changed ever since. But the language has evolved and the jobs have revolved. I have done many talks on the evolution of the language. This time I will talk about the revolution of the jobs.</div>
                 </li>
             </ul>
         </div>
@@ -729,7 +729,7 @@
                     </div>
                 </li>
                 <li class="talk-summary" style="display:none;">
-                    <div class="summary">某MMORPGでゲーム中にPerlの同時起動を遮断する機能が追加されたことがありました。参考：http://slashdot.jp/developers/article.pl?sid=06/09/12/1015226 Win32::GuiTest や Win32::Screenshot などのモジュールを利用して、Windows上で動作するゲームを自動でプレイするPerlプログラムを作成する方法について解説します。</div>
+                    <div class="summary">某MMORPGでゲーム中にPerlの同時起動を遮断する機能が追加されたことがありました。 Win32::GuiTest や Win32::Screenshot などのモジュールを利用して、Windows上で 動作するゲームを自動でプレイするPerlプログラムを作成する方法について解説します。 Once upon a time, perl.exe was banned during a game by MMORPG. I will explain how to create the Perl bot program which plays automatically games on Windows using some modules such as Win32::GuiTest and Win32::Screenshot.</div>
                 </li>
             </ul>
         </div>
